--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div id="main-map"></div>
   <button type="button" name="button" id="button-bounce-markers">Bounce</button>
+  <button type="button" name="button" id="button-bounce-markers">Take me to London</button>
 
 </body>
 
