add maps and windows

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
   <div id="main-map"></div>
-  <button type="button" name="button" id="button-bounce-markers">Bounce</button>
-  <button type="button" name="button" id="button-bounce-markers">Take me to London</button>
+  <button type="button" name="button" id="ldnButton">Take me to London</button>
+  <button type="button" name="button" id="checkLocation">Check Location</button>
+  <button type="button" name="button" id="Where's Sunny?">Where's Sunny?</button>
 
 </body>
 
